2015-02-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* parser.c (isolate_last_space, start_empty_line_after_command): 
	Add comments.
	(big_loop, process_remaining_on_line): Function renamed.
	<no brace after brace command>: Add commented-out code and 
	comment.
	* separator.c (handle_open_brace): Set "spaces_before_argument" 
	extra value.

2015-02-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* end_line.c (parse_line_command_args): More complete 
	implementation.
	(is_decimal_numer): New function split from 
	parse_line_command_args.

	* parser.c (read_command_name): Return null if not looking at a 
	valid command name.

2015-02-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* errors.c: New file.
	(line_error, line_errorf, dump_errors): New functions.
	* end_line.c (parse_line_command_args) <@sp>: Call line_errorf 
	if argument is malformed.

	* Parsetexi/lib/Parsetexi.pm (parse_texi_file): Fetch error 
	messages.

	* dump_perl.c (dump_line_nr): Arguments changed.
	* test-files/error.texi: New test file.

2015-01-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* command_data.txt: Specify argument types of the other "misc" 
	commands.
	* end_line.c (parse_line_command_args): More complete 
	implementation.
	* parser.c (digit_chars): New variable.

2015-01-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* end_line.c (end_line_misc_line): Set "misc_content" key as 
	intended, instead of "misc_args".
	<sectioning commands>: Set "level" extra value.
	* handle_commands.c (handle_misc_command): Add comment.

	* command_data.txt: Add "sectioning" flag for sectioning 
	commands.  Add "majorheading".  Say that "@printindex" takes 1 
	argument.
	* end_line.c (parse_line_command_args) <printindex>: Handle.

	* Parsetexi/lib/Parsetexi.pm (_add_parents): Set 'level' value 
	on elements.

2015-01-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* end_line.c (end_line_starting_block, end_line_misc_line): 
	Split functions out of end_line.
